Best organization in project

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     
     <div id="game-container"></div>
 
-    <!--footer>Made by <a href="#"></a> with <a href="http://phaser.io">Phaser</a></footer-->
+    <footer>Made by <a href="#"></a> with <a href="http://phaser.io">Phaser</a></foote>
     
-    <script src="js/phaser.min.js" type="text/javascript"></script>
+    <script src="js/libs/phaser.min.js" type="text/javascript"></script>
     <script src="js/Boot.js" type="text/javascript"></script>
     <script src="js/Preloader.js" type="text/javascript"></script>
     <script src="js/StartMenu.js" type="text/javascript"></script>
