--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <script src="js/Boot.js" type="text/javascript"></script>
     <script src="js/Preloader.js" type="text/javascript"></script>
     <script src="js/StartMenu.js" type="text/javascript"></script>
+    <script src="js/Game.js" type="text/javascript"></script>
     <script src="js/SpaceInvasion.js" type="text/javascript"></script>
 
     <!--script>
