adding hisghscores (not wirking yet) cordova installed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- /build -->
     
     <!-- build:css firebase.min.css -->
-    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+    <!--script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script-->
     <!-- /build -->
 </head>
 
@@ -44,6 +44,10 @@
 
   <div id="SpaceInvader-game" class="game"></div>
 
+  <!-- build:add -->
+  <script type="text/javascript" src="cordova.js"></script>
+  <!-- /build -->
+  
   <!-- build:remove -->
   <script src="http://localhost:35729/livereload.js"></script>
   <!-- /build -->
