automatización cordova en el html

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
   <div id="SpaceInvader-game" class="game"></div>
 
-  <!-- build:add -->
+  <!-- build:template
   <script type="text/javascript" src="cordova.js"></script>
-  <!-- /build -->
+  /build -->
   
   <!-- build:remove -->
   <script src="http://localhost:35729/livereload.js"></script>
