--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     
     <!-- build:css firebase.min.css -->
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+    <script src='src/firebaseStuff.js'></script>
     <!-- /build -->
 </head>
 
