--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-          <h4 class="modal-title" id="promptPlayerNameModal-label">HIGHSCORER REGISTRATION</h4>
+          <h4 class="modal-title" id="promptPlayerNameModal-label">HIGHSCORE REGISTRATION</h4>
         </div>
         <div class="modal-body">
           <h1>CONGRATULATIONS HEARTHLING</h1>
-          <p>TYPE YOUR NAME TO SIGN THE HALL OF FAME</p>          
+          <p>TYPE YOUR NAME TO SIGN IN THE HALL OF FAME</p>          
           <input id="inputName" type="text" name="nickname" placeholder="Enter your name...">
         </div>
         <div class="modal-footer">
-          <button id="sendScoreButton" type="button" class="btn btn-default" data-dismiss="modal">Guardar</button>
+          <button id="sendScoreButton" type="button" class="btn btn-default" data-dismiss="modal">SAVE</button>
         </div>
       </div>
     </div>
@@ -82,15 +82,17 @@
 
   <!-- build:js bundle.min.js -->
   <script src="bundle.js"></script>
+  <script src="src/plugins/jquery-1.12.3.min.js"></script>
+  <script src="src/plugins/bootstrap.js"></script>
   <!-- /build -->
   
   <!-- PLUGINS NEEDED FOR THE IMPORTANT MESSAGE MODAL POPUP -->
 
     <!-- Latest jQuery (1.11.1) -->
-    <script src="src/Components/jquery-1.12.3.min.js"></script>
+    <!--script src="src/plugins/jquery-1.12.3.min.js"></script-->
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="src/Components/bootstrap.js"></script>
+    <!-- script src="src/plugins/bootstrap.js"></script-->
 
   <!-- END PLUGINS NEEDED FOR THE IMPORTANT MESSAGE MODAL POPUP --> 
 
